# mappy

./: .gitignore  Cargo.toml  README  afford.json  afford2.json  text.json
access/: Cargo.toml
access/src/: main.rs  mappy_py.rs
affordances/: mario.nes-2023-11-10T17:02:52.475411+00:00.json  mario.nes-2023-11-10T19:43:44.321687+00:00.json  metroid.nes-2023-11-10T16:49:29.761666+00:00.json  unknownrom-2023-11-10T16:43:39.413640+00:00.json
affordances/roms/: mario.nes-2023-11-08T17:06:57.036084+00:00.json  mario.nes-2023-11-08T17:13:52.242692+00:00.json
batch/: Cargo.toml
batch/src/: main.rs
cores/: fceumm_libretro.dylib  fceumm_libretro.lib
filters/: censor_sprites.py  identity.py  reddify.py  utility.py
inputs/: bm_1.fm2  chip_2.fm2  contra_1.fm2  cv_1.fm2  cv_3.fm2  cv_4.fm2  cv_6.fm2  cv_7.fm2  cv_8.fm2  dw_1.fm2  dw_2.fm2  dw_3.fm2  dw_4.fm2  mario3_1.fm2  mario3_2.fm2  mario_2.fm2  mario_3.fm2  mario_4.fm2  metroid_1.fm2  metroid_2.fm2  metroid_3.fm2  metroid_4.fm2  metroid_5.fm2  metroid_9.fm2  zelda2_1.fm2  zelda2_2.fm2  zelda2_3.fm2  zelda_0.fm2  zelda_1.fm2  zelda_3.fm2  zelda_4.fm2  zelda_5.fm2  zelda_8.fm2  zelda_9.fm2
int/: Cargo.toml
int/inputs/: afford2.json
int/src/: afford.json  affordance.rs  debug_decorate.rs  main.rs  playback.rs  scroll.rs
mappy/: Cargo.toml
mappy/src/: framebuffer.rs  lib.rs  mappy.rs  metaroom.rs  ringbuffer.rs  room.rs  screen.rs  sprites.rs  tile.rs  time.rs  util.rs
mappy/src/mappy/: matching.rs  scrolling.rs  splits.rs
scroll_data/mario/2023-09-15-12-15-31/: scrolls.csv
scroll_data/mario/2023-09-15-12-16-19/: inputs.fm2  scrolls.csv
scroll_data/mario/2023-09-15-12-16-27/: inputs.fm2  scrolls.csv
scroll_data/mario/2023-09-15-12-16-30/: scrolls.csv
scroll_data/mario/2023-09-15-12-22-31/: scrolls.csv
scroll_data/mario/2023-09-15-12-30-47/: scrolls.csv
scroll_data/mario/2023-10-06-11-45-37/: scrolls.csv
scroll_data/mario/2023-10-06-12-16-39/: scrolls.csv
scroll_data/mario/2023-10-06-12-17-15/: scrolls.csv
scroll_data/mario/2023-10-06-12-29-16/: inputs.fm2  scrolls.csv
scroll_data/mario/2023-10-06-12-29-18/: inputs.fm2  scrolls.csv
scroll_data/mario/2023-10-06-12-29-19/: scrolls.csv
scrolls/: Cargo.toml
scrolls/src/: main.rs
src/: .mappy.rs.swp  framebuffer.rs  lib.rs  main.rs  mappy.rs  metaroom.rs  pixels.rs  ringbuffer.rs  room.rs  screen.rs  scrolling.rs  sprites.rs  tile.rs  time.rs
src/mappy/: .splits.rs.swp  matching.rs  scrolling.rs  splits.rs
state/: mario.state
tests/: common.rs  mario_11_ab.rs  mario_11_ba.rs  mario_sprites.rs  metroid_basic.rs  zelda2_basic.rs  zelda_d1.rs
tests/data/: mario_11_a.fm2  mario_sprites.fm2  metroid_basic.fm2  zelda_d1.fm2
