[package]
name = "mappy"
version = "0.1.0"
authors = ["Joseph C. Osborn <jcoa2018@pomona.edu>"]
edition = "2018"

[dependencies]
retro-rs = "0.3.1"
image = "0.21.0"
libc = "0.2.69"
libloading = "0.6.1"
itertools = "0.8.0"
sdl2 = { version="=0.34.2", features=["bundled"] }
id-arena = { version="2.2.1", features=["rayon"] }
uuid = { version="0.8.1", features=["v4"] }

[profile.dev]
opt-level = 3
lto = "thin"

[profile.test]
opt-level = 3
lto = "thin"
