[package]
name = "mappy"
version = "0.1.0"
authors = ["Joseph C. Osborn <jcoa2018@pomona.edu>"]
edition = "2018"

[dependencies]
retro-rs = { git = "https://github.com/JoeOsborn/retro-rs", branch="master" }
image = "0.21.0"
libc = "0.2.69"
libloading = "0.6.1"
itertools = "0.8.0"
macroquad = { git = "https://github.com/not-fl3/macroquad", rev="31cff5d89ed17a6c83f39cf6568348dab25145dc" }
id-arena = { version="2.2.1", features=["rayon"] }
uuid = { version="0.8.1", features=["v4"] }
chrono = "0.4"
argh = "0.1.3" 
crossbeam = "0.8.0"
rayon="1.5.0"
tabbycat={version="0.1.1", features=["attributes"]}

[profile.dev]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.test]
opt-level = 3
lto = "thin"
codegen-units = 1