[package]
name = "int"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

macroquad = "0.3.24" # { git = "https://github.com/not-fl3/macroquad", rev="31cff5d89ed17a6c83f39cf6568348dab25145dc" }
mappy = {path="../mappy"}
retro-rs = { git = "https://github.com/JoeOsborn/retro-rs", branch="master" }
chrono="0.4.22"
image = "0.24.4"
bitflags = "1.3.2"
