[package]
name = "int"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

mappy = {path="../mappy"}
retro-rs = { git = "https://github.com/JoeOsborn/retro-rs", branch="master" }
bitflags = "1.3.2"
video-rs = {version="0.4.1",features=["ndarray"]}
macroquad = "0.4.4"
image = "0.24.7"
chrono = "0.4.31"
imageproc = "0.23.0"
ndarray = "0.15.6"
palette = "0.7.3"
serde_json = "1.0.107"
serde_derive = "1.0.189"
serde = { version = "1.0", features = ["derive"] }