[package]
name = "mappy"
version = "0.1.0"
authors = ["Joseph C. Osborn <jcoa2018@pomona.edu>", "Nathan Dailey", "Soksamnang Lim"]
edition = "2024"

[dependencies]
retro-rs = { git = "https://github.com/JoeOsborn/retro-rs", branch="master" }
image = "0.25.6"
itertools = "0.14.0"
id-arena = { version="2.2.1", features=["rayon"] }
uuid = { version="1.16.0", features=["v4"] }
crossbeam = "0.8.4"
rayon="1.10.0"
tabbycat={version="0.1.3"}
num-traits = "0.2"
